# salt-formulas

./: .gitignore  .gitmodules  .mrconfig  LICENSE.txt  Makefile  Pipfile  README.rst  gen_repo_list.py
doc/: Makefile  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/_files/: cookiecutter  formulas  heat  myrepos  scripts  vagrant
doc/source/_images/: cluster_detail.graphml  druidly_system.graphml  formula_system_cluster.graphml  formula_system_cluster_simple.graphml  metadata_structure.graphml  soft_hard_metadata.graphml
doc/source/develop/: extending-contribute.rst  extending-cookiecutter.rst  extending-deployments.rst  extending-ecosystem.rst  extending-formulas.rst  extending-myrepos.rst  extending.rst  index.rst  maintenance-packaging.rst  maintenance-versioning.rst  maintenance.rst  metadata-pillar.rst  metadata-reclass.rst  navigation.txt  overview-formula.rst  overview-mda.rst  overview-packaging.rst  overview-pillar.rst  overview-reclass.rst  overview-salt.rst  overview-versioning.rst  overview.rst  quickstart-heat.rst  quickstart-myrepos.rst  quickstart-vagrant.rst  quickstart.rst  testing-coding-style.rst  testing-formulas.rst  testing-integration.rst  testing-metadata.rst  testing.rst
doc/source/install/: configure-dashboard.rst  configure-infrastructure.rst  configure-initial.rst  configure-orchestrate.rst  configure-telemetry.rst  configure.rst  index.rst  install-config-master.rst  install-config.rst  install-infrastructure-orchestrate.rst  install-infrastructure-validate.rst  navigation.txt  overview-mda.rst  (+3 more)
(+144 files in other folders)
