[metadata]
name = salt-formulas
summary = SaltStack-Formulas' Documentation
description-file =
    README.rst
author = Aleš Komárek
author-email = ales.komarek@newt.cz
home-page = https://github.com/salt-formulas
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
